# waystt

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.build-vulkan  README.md
.github/workflows/: check.yml  ci.yml  release.yml
src/: app.rs  beep.rs  config.rs  main.rs
src/transcription/: local.rs  mod.rs
